turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:20: error: class Array takes type parameters
def makePattern(x:Array) {
                  ^Kerr36:20: error: class Array takes type parameters
def makePattern(x:Array) {
                  ^